# hangman_solver

./: Cargo.toml  README.md
preprocess/: main.rs
src/: action.rs  dict.rs  error.rs  game.rs  httpconnector.rs  lib.rs  protocol.rs
tools/: guesser.rs  resover.rs
